; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltUnregisterExtModule.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltUnregisterExtModule.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xsltExtensionsHash = common dso_local global i32* null, align 8
@xsltExtMutex = common dso_local global i32 0, align 4
@xsltFreeExtModuleEntry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xsltUnregisterExtModule(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %22

8:                                                ; preds = %1
  %9 = load i32*, i32** @xsltExtensionsHash, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  store i32 -1, i32* %2, align 4
  br label %22

12:                                               ; preds = %8
  %13 = load i32, i32* @xsltExtMutex, align 4
  %14 = call i32 @xmlMutexLock(i32 %13)
  %15 = load i32*, i32** @xsltExtensionsHash, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* @xsltFreeExtModuleEntry, align 4
  %18 = call i32 @xmlHashRemoveEntry(i32* %15, i32* %16, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* @xsltExtMutex, align 4
  %20 = call i32 @xmlMutexUnlock(i32 %19)
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %12, %11, %7
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @xmlMutexLock(i32) #1

declare dso_local i32 @xmlHashRemoveEntry(i32*, i32*, i32) #1

declare dso_local i32 @xmlMutexUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
